--- a/index.css
+++ b/index.css
@@ -1,33 +1,44 @@
 .container{
     font-family: monospace, sans-serif, serif;
-    background-color: paleturquoise;
+    background-image:url(./img/background-image.avif);
+    margin: auto;
+    display:block;
 }
 
 .header{
-    text-align: center;
+    margin-top: 15px;
+    margin-left: 240px;
+    margin-right:220px;
+    display:block;
+    text-align:center;
 }
 
-.img{
-    height:350px;
-    width: 350px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-
+.img {
+    width: 100px;
+    height: 100px;
+    border: 2px dotted white;
 }
 
-.link{
-    text-align: center;
-    font-size: 24px;
-    color:  rgb(108, 202, 233);
-    padding: 15px;
-    margin: 50px;
-    border:30px;
-    background-color: rgb(168, 255, 255);
-    text-decoration: none;   
+.item.one{
+    margin-top: 10px;
 }
 
-
-.list{
-    list-style: none;
+.item.two{
+    margin-top: 25px;
+    margin-left: 210px;
+    
 }
+.item.three{
+    margin-top: 25px;
+    margin-left: 400px;
+}
+
+.header,
+a{
+    background: white;
+    color:black;
+    text-decoration: none;
+    padding: 3px;
+    border: 2px dotted gray;
+}
+
